# SOCP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/socp/: program.hpp  socp.hpp
include/socp/dev/: ch376s.hpp  dev.hpp  kb64.hpp  lcd.hpp  pic.hpp
src/: socp.cpp
src/dev/: ch376s.cpp  dev.cpp  kb64.cpp  lcd.cpp
src/programs/: bootloader.cpp  hello.cpp  kb.cpp  openfile.cpp  pic.cpp  sum.cpp
